Tue Aug 10 20:13:52 1999  Loic Dachary  <loic@yoda.ceic.com>

	* db/mp/mp_bh.c: fixed HAVE_ZLIB -> HAVE_LIBZ

Tue Aug 10 17:58:01 1999  Loic Dachary  <loic@yoda.ceic.com>

	* configure,configure.in,db/dist/configure.in,db/dist/configure:
	  added --with-zlib configure flag for htdig to specify zlib 
	  installation path. Motivated to have compatible tests between
	  htdig and db as far as zlib is concerned. Otherwise configuration
	  is confused and miss an existing libz.

Tue Aug 10 17:44:49 1999  Loic Dachary  <loic@yoda.ceic.com>

	* db/mp/mp_fopen.c: fixed cmpr_open called even if libz not here

Tue Aug 10 17:40:53 1999  Loic Dachary  <loic@yoda.ceic.com>

	* htlib/langinfo.h: header missing on FreeBSD-3.2, needed
	  by strptime.c

Tue Aug 10 11:43:14 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.h, htdig/HTML.cc(parse, do_tag): fix problems with
	SGML entity decoding, add decoding of entities within tag attributes.

Mon Aug  9 21:13:50 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/HtHTTP.h(SetRequestMethod): Fix declaration to be void.

	* htdig/Transport.h(GetRequestMaxDocumentSize): Fix declaration to
	return int.

	* htdig/Retriever.cc(got_href): Fix mistake in hopcount
	calculations. Now returns the correct hopcount even for pages
	when a faster path is found. (Still need to change indexing to
	sort on hopcount).

	* htsearch/htsearch.cc(main): Fix compiler error in gcc-2.95 when
	discarding const by using strcpy. It's a hack, hopefully there's a
	better way.

Mon Aug  9 17:23:15 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/URL.cc(ServerAlias): fix small memory leak in new default
	path code (don't need to allocate new from string each time).

	* htlib/cgi.cc(init): Fix PR#572, where htsearch crashed if
	CONTENT_LENGTH was not set but REQUEST_METHOD was.

	* htfuzzy/Fuzzy.cc(getWords), htfuzzy/Metaphone.cc(vscode):
	Fix Geoff's change of May 15 to Fuzzy.cc, add test to vscode macro